# advent-of-code-2024

./: AdventOfCode2024.hs  advent-of-code2024.cabal
