cabal-version: 3.6
name:          advent-of-code2024
version:       0.1.0.0
build-type:    Simple

library
  ghc-options:        -Wall -Wno-missing-signatures -Wno-name-shadowing
  default-extensions:
    BlockArguments
    QuasiQuotes

  exposed-modules:    AdventOfCode2024
  hs-source-dirs:     .
  default-language:   GHC2024
  build-depends:
    , base        ^>=4.20.0.0
    , containers
    , extra
    , here
